Bug 60138 - [i965gme sdvo TV detect regression] WARNING: at drivers/gpu/drm/i915/intel_display.c:3810 intel_modeset_check_state+0x5fc/0x610
Summary: [i965gme sdvo TV detect regression] WARNING: at drivers/gpu/drm/i915/intel_di...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-31 22:01 UTC by Simon Farnsworth
Modified: 2017-07-24 22:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg from boot until first intel_modeset_check_state warning (137.38 KB, text/plain)
2013-01-31 22:01 UTC, Simon Farnsworth
no flags Details
Full dmesg to KDE running (194.23 KB, text/plain)
2013-01-31 22:14 UTC, Simon Farnsworth
no flags Details
fix sdvo connector get_hw_state function (1.52 KB, patch)
2013-02-20 20:05 UTC, Daniel Vetter
no flags Details | Splinter Review

Description Simon Farnsworth 2013-01-31 22:01:17 UTC
Created attachment 74019 [details]
dmesg from boot until first intel_modeset_check_state warning

As requested by danvet on IRC (trying to get to the bottom of why the Fedora 18 kernel shows several WARNINGS in intel_modeset_check_state), I've built drm-intel-nightly as of yesterday (commit b071741e056638d2faf05324edbc01a046c32e01), and confirmed that I still get the warnings when I log into KDE, or when I run xrandr by hand.

I'm attaching the dmesg with drm.debug=0xe, cut at the first warning - if the subsequent warnings are of interest, I have the complete dmesg in a file, with all 20 warnings that I get when I log in.

I'm about to pack up for FOSDEM - the laptop will be coming with me, so if more debug information is needed, I can either provide it at FOSDEM, or when I return.
Comment 1 Simon Farnsworth 2013-01-31 22:14:00 UTC
Created attachment 74020 [details]
Full dmesg to KDE running

This has all 20 warnings I get in the process of logging into KDE - once logged in, I can trigger another batch of 20 by running xrandr in a terminal. Note that from boot to KDM running and idle has no warnings - I suspect that KDE runs the equivalent of xrandr for me when I log in.
Comment 2 Daniel Vetter 2013-01-31 22:19:48 UTC
The intel_sdvo_connector_get_hw_state seems to be wrong and doesn't check for the dpms state. active_output should be called selected output more accurately ...
Comment 3 Chris Wilson 2013-02-20 14:59:13 UTC
Daniel, did you by any chance have a look at this bug?
Comment 4 Daniel Vetter 2013-02-20 17:43:43 UTC
Meh, analyzed but forgotten to implement the patch ... will work on this asap.
Comment 5 Daniel Vetter 2013-02-20 20:05:41 UTC
Created attachment 75200 [details] [review]
fix sdvo connector get_hw_state function

Please test this patch, thanks.
Comment 6 Simon Farnsworth 2013-04-02 15:54:41 UTC
My apologies for the delay in testing this patch - the laptop has chosen to kill its cooling system (so it cooks HDDs terminally whenever they're inserted), and I've not yet got round to setting up a suitable NFS root setup to let it boot and run over PXE instead.
Comment 7 Egbert Eich 2013-04-02 16:55:46 UTC
Tested-By: Egbert Eich <eich_at_freedesktop.org>
for patch in attachment #75200 [details] [review].
Comment 8 Daniel Vetter 2013-04-03 09:06:45 UTC
Fix merged, please reopen in case this still is an issue for you:

commit bd6946e87a98fea11907b2a47368e13044458a35
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Tue Apr 2 21:30:34 2013 +0200

    drm/i915: Fix sdvo connector get_hw_state function


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.